[gd_scene load_steps=7 format=3 uid="uid://dm1am5vnd01oj"]

[ext_resource type="Script" uid="uid://dtlreqhgumn77" path="res://Scenes/Gamemodes/Survival/Survival.gd" id="1_6ova7"]
[ext_resource type="Theme" uid="uid://c3onmm00qpthy" path="res://Scenes/Gamemodes/Survival/gameover_theme.tres" id="2_05y87"]
[ext_resource type="Theme" uid="uid://beq3sqokihu4k" path="res://Art/Themes/menu_theme.tres" id="2_321b6"]
[ext_resource type="Texture2D" uid="uid://ddsuf0ur4ndh5" path="res://Art/Images/MenuButtonNormal.png" id="3_ywpm3"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_dr1s8"]
texture = ExtResource("3_ywpm3")
expand_margin_left = 30.0
expand_margin_top = 20.0
expand_margin_right = 30.0
expand_margin_bottom = 15.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_321b6"]
bg_color = Color(0.677325, 0.587526, 0.428256, 0.309804)
expand_margin_left = 30.0
expand_margin_top = 20.0
expand_margin_right = 30.0
expand_margin_bottom = 15.0

[node name="Survival" type="Node3D"]
script = ExtResource("1_6ova7")

[node name="WaveTimer" type="Timer" parent="."]
wait_time = 10.0

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -81.0
offset_top = 40.0
offset_right = 82.0
offset_bottom = 63.0
grow_horizontal = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme = ExtResource("2_321b6")
theme_override_styles/panel = SubResource("StyleBoxTexture_dr1s8")

[node name="Panel" type="Panel" parent="CanvasLayer/PanelContainer"]
z_index = -1
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_321b6")

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="Label" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "Wave: "

[node name="WaveNumber" type="Label" parent="CanvasLayer/PanelContainer/HBoxContainer"]
layout_mode = 2
text = "test"

[node name="GameOver" type="Panel" parent="CanvasLayer"]
visible = false
z_index = 10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_05y87")

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/GameOver"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/GameOver/CenterContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/GameOver/CenterContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 70
text = "GAME OVER"

[node name="Control" type="Control" parent="CanvasLayer/GameOver/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2

[node name="Button" type="Button" parent="CanvasLayer/GameOver/CenterContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
focus_mode = 0
text = "Back to Menu"

[connection signal="timeout" from="WaveTimer" to="." method="_on_wave_timer_timeout"]
[connection signal="pressed" from="CanvasLayer/GameOver/CenterContainer/VBoxContainer/Button" to="." method="_on_button_pressed"]
